--- a/index.html
+++ b/index.html
@@ -5,18 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
+    rel="stylesheet" />
     <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>Awesome books</h1>
-
-    <main id="books"></main>
-
-    <form action="#">
-        <input type="text" name="title" id="title" placeholder="Title">
-        <input type="text" name="author" id="author" placeholder="Author">
-        <button type="submit" id="add">Add</button>
-    </form>
-
+    <section id="nav-bar" class="nav-bar">
+        <div class="navbar">
+          <a href="#">
+            <h1>Awesome Books</h1>
+          </a>
+          <div class="main-links">
+            <ul>
+              <li><a  id="listshow"  href="#">List</a></li>
+              <li><a  id="addshow" href="#" >Add New</a></li>
+              <li><a  id="contactshow" href="#" >Contact</a> </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <div id="date-time">fecha</div>
+    <!-- list book section -->
+    
+      <div class="books-table-container"  id="show-1">
+        <h1 class="main-title">All Awesome Books</h1>
+        <div class="book-list" id="book-list">
+          <div class="books-table"></div>
+        </div>
+      </div>
+    <!-- new book section -->
+    </section>
+      <form id="book-form" class="book-form" >
+        <h2>Add a new book</h2>
+        <div>
+          <input type="text" id="title" placeholder="Title" required />
+        </div>
+        <div>
+          <input type="text" id="author" placeholder="Author" required />
+        </div>
+        <button type="submit" class="btn-add">Add</button>
+      </form>
+      <!-- Contact section -->
+      <section class="contact-section" id="contact1">
+        <section id="contact">
+          <h2>Contact Information</h2>
+          <p>Do you have any questions or you just want to say "Hello"?<br>You can reach out to us!</p>
+          <ul>
+            <li>Our email: tumbu.elad@gmail.com</li>
+            <li>Our email: @gmail.com</li>
+            <li>Our phone number: +237 675 356 578</li>
+            <li>Our phone number: </li>
+            <li>Our address: Cameroon </li>
+            <li>Our address: </li>
+          </ul>
+        </section>
+      </section>
+    
+      <footer class="footer-container">
+        <div>
+          <p>Copyright @ 2023 Creative Commons. Some Rights Reserved.</p>
+        </div>
+      </footer>
 </body>
 </html>
