--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="main.js" defer></script>
+    <title>Awesome Books</title>
 </head>
 <body>
     <h1>Awesome books</h1>
@@ -13,10 +12,11 @@
     <main id="books"></main>
 
     <form action="#">
-        <input type="text" name="title" id="title" placeholder="Title">
-        <input type="text" name="author" id="author" placeholder="Author">
+        <input type="text" name="title" id="title" placeholder="Title"><br><br>
+        <input type="text" name="author" id="author" placeholder="Author"><br><br>
         <button type="submit" id="add">Add</button>
     </form>
 
+    <script src="main.js" type="module"></script>
 </body>
 </html>
