--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Awesome books</h1>
+    <h1>All awesome books</h1>
 
     <main id="books"></main>
+    <div id="line"></div>
 
     <form action="#">
+        <h1>Add a new book</h1>
         <input type="text" name="title" id="title" placeholder="Title"><br><br>
         <input type="text" name="author" id="author" placeholder="Author"><br><br>
         <button type="submit" id="add">Add</button>
