--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <form action="#">
         <h1>Add a new book</h1>
-        <input type="text" name="title" id="title" placeholder="Title"><br><br>
-        <input type="text" name="author" id="author" placeholder="Author"><br><br>
+        <input type="text" name="title" id="title" placeholder="Title">
+        <input type="text" name="author" id="author" placeholder="Author">
         <button type="submit" id="add">Add</button>
     </form>
 
