--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <h2>Awesome Books</h2>
+    <h3>Awesome Books</h2>
     <nav>
       <a href="#books" class="active">List</a>
       <a href="#form">Add new</a>
@@ -48,7 +48,8 @@
   </section>
 
   <footer>
-    <p>Copyright  ...</p>
+    <p>Copyright 
+         ...</p>
   </footer>
   
 </body>
